Corrected the phone number.

--- a/_includes/contact_list.html
+++ b/_includes/contact_list.html
@@ -1,6 +1,6 @@
 <ul class="no-bullets contact-list">
   <li><span class="icon-mail"></span><a href="mailto:s.a.nikitina@gmail.com">s.a.nikitina [at] gmail.com</a></li>
-  <li><span class="icon-mobile"></span>+61 1234 56789</li>
+  <li><span class="icon-mobile"></span>+61 411 561 955</li>
   <li><span class="icon-skype"></span><a href="skype:s.a.nikitina">s.a.nikitina</a></li>
   <li><span class="icon-linkedin"></span><a href="http://www.linkedin.com/in/svetlananikitina">svetlananikitina</a></li>
 </ul>
